--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -172,6 +172,7 @@ header ul a strong {
 
 section {
   width:600px;
+  <!-- -----------width:500px;---------------------------- --> 
   float:right;
   padding-bottom:50px;
 }
