--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -55,7 +55,8 @@ a:hover small {
 }
 
 .wrapper {
-  width:860px;
+  width:1200px;
+  <!-- -----------------width:860px;----------------------------------- --> 
   margin:0 auto;
 }
 
