--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -55,7 +55,7 @@ a:hover small {
 }
 
 .wrapper {
-  width:1200px;
+  width:860px;
   <!-- -----------------width:860px;----------------------------------- --> 
   margin:0 auto;
 }
@@ -107,6 +107,7 @@ img {
 
 header {
   width:270px;
+  <!-- --------------------width:270px;----------------------------------- --> 
   float:left;
   position:fixed;
   -webkit-font-smoothing:subpixel-antialiased;
@@ -172,7 +173,7 @@ header ul a strong {
 }
 
 section {
-  width:600px;
+  width:500px;
   <!-- -----------width:500px;---------------------------- --> 
   float:right;
   padding-bottom:50px;
